--- a/elyreacts/src/App.scss
+++ b/elyreacts/src/App.scss
@@ -3,32 +3,11 @@
 html {
     font-family: "Jost", "Montserrat", "Roboto", sans-serif;
     font-size: 16px;
+
+    overflow-x: hidden;
 }
 body {
-    overflow: hidden;
-
     background-color: $color_white;
-}
-#root {
-    & > .App {
-        display: grid;
-        grid-template-rows: repeat(3, minmax(min-content, max-content));
-
-        height: 100vh;
-        overflow-y: auto;
-
-        & > header {
-            grid-row: 1 / 2;
-        }
-        & > div {
-            grid-row: 2 / 3;
-
-            height: 100%;
-        }
-        & > footer {
-            grid-row: 3 / 4;
-        }
-    }
 }
 
 * {
@@ -38,6 +17,8 @@ body {
 p > a,
 span > a,
 a {
+    display: inline-block;
+
     color: $color_link;
     text-decoration: none;
 
@@ -141,7 +122,6 @@ em {
         transition: $transition_time_anim;
     }
 
-    // todo: always show on displays larger than tablet width!
     &:hover {
         & > span {
             // padding: 0.25rem 1.5rem; // todo: fix page jump
@@ -156,59 +136,44 @@ em {
     }
 }
 
-ul {
-    &.style-none {
-        list-style-type: none;
+ul.style-none {
+    list-style-type: none;
 
-        li {
-            display: inline-block;
-        }
-    }
-
-    &.tiled-list {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: center;
-
-        li {
-            display: inline-block;
-
-            margin: 0.5rem;
-
-            & > * {
-                display: inline-block;
-
-                margin: 0;
-                padding: 1em 1.5em;
-                border: 0.15rem solid $color_indywalls_primary;
-                border-radius: 0;
-
-                text-transform: uppercase;
-                font-size: 0.8rem;
-
-                transition: $transition_time_link;
-            }
-
-            & > *:hover,
-            &.active > * {
-                color: $color_white;
-                background: $color_indywalls_primary;
-            }
-        }
+    li {
+        display: inline-block;
     }
 }
 
-nav {
-    a {
-        margin: 0 0.5rem;
-        padding: 1rem 0.5rem;
+ul.tiled-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
 
-        color: $color_black;
+    li {
+        display: inline-block;
 
-        &:hover {
-            color: $color_indywalls_primary;
+        margin: 0.5rem;
+
+        & > * {
+            display: inline-block;
+
+            margin: 0;
+            padding: 1em 1.5em;
+            border: 0.15rem solid $color_indywalls_primary;
+            border-radius: 0;
+
+            text-transform: uppercase;
+            font-size: 0.8rem;
+
+            transition: $transition_time_link;
+        }
+
+        & > *:hover,
+        &.active > * {
+            color: $color_white;
+            background: $color_indywalls_primary;
         }
     }
 }
