--- a/elyreacts/src/components/styles/Header.module.scss
+++ b/elyreacts/src/components/styles/Header.module.scss
@@ -1,201 +1,331 @@
-@import "../../variables.scss";
+@import "../../variables.scss";// Variables
 
-.container {
+$breakpoint_tablet: $media_width_tablet;
+$breakpoint_desktop: $max-width_content;
+$max_header_width: $media_width_retina;
+
+$header_height: 3.5rem;
+
+$color_background: $color_white;
+$color_background_alt: darken($color_white, 1);
+$color_text: $color_black;
+$color_text_alt: $color_indywalls_primary;
+$color_border: darken($color_white, 1);
+
+$transition_link: $transition_time_link ease-in-out;
+$transition_anim: $transition_time_anim ease-in-out;
+
+header.wrapper {
     position: sticky;
     z-index: 99998;
     top: 0;
-    left: 0;
+
+    height: $header_height;
     width: 100%;
 
-    background-color: $color_white;
+    background: $color_background;
 
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 -4px 12px rgba(0,0,0,0.15);
+
+    & * {
+        box-sizing: content-box;
+    }
 }
+header.wrapper .container {
+    position: absolute;
+    box-sizing: border-box;
+    top: 0;
+    left: 0;
 
-.content {
-    display: grid;
-    grid-template-columns: max-content 1fr max-content;
-    grid-template-rows: 1fr 1fr;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 
     width: 100%;
-    max-width: $max-width_content;
+    max-width: $max_header_width;
+
+    padding: 0 1.5rem;
 
     margin: 0 auto;
+    border-bottom: 1px solid $color_border;
 
-    /* Grid assignments */
+    & > .logo {
+        & > img {
+            height: 3rem;
+            width: 2rem;
+            padding: 0.25rem;
 
-    & > a {
-        grid-area: 1/1/2/2;
-    }
-
-    & > .accountNav {
-        grid-area: 1/3/2/4;
-    }
-
-    & > .mainNav {
-        grid-area: 2/1/3/4;
+            pointer-events: none;
+        }
     }
 }
 
-// Logo
-.content > a {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+// Hamburger styles
+input.hamburgerButton {
+    display: none; // Hide checkbox
 
-    padding: 0.75rem 1rem;
+    & ~ label {
+        position: relative;
+        padding: 0.25rem;
 
-    & > img {
-        height: 2rem;
+        width: 1.5rem;
+        height: 1.25rem;
+
+        & > div,
+        & > div::before,
+        & > div::after {
+            content: "";
+            position: absolute;
+            top: 0.825rem;
+
+            height: 0.125rem;
+            width: 1.5rem;
+
+            opacity: 1;
+
+            background: $color_text;
+
+            transition: $transition_link;
+        }
+        & > div::before {
+            top: -0.5rem;
+        }
+        & > div::after {
+            top: 0.5rem;
+        }
     }
 }
 
-.mainNav {
-    display: flex;
-    align-items: stretch;
-    justify-content: stretch;
+// Menu OPEN styles
+header.wrapper .container .hamburgerButton:checked {
+    & ~ label {
+        & > div {
+            width: 0;
+            background: transparentize($color_text, 1);
+        }
+        & > div::before {
+            transform: rotateZ(45deg);
+            top: -0rem;
+        }
+        & > div::after {
+            transform: rotateZ(-45deg);
+            top: -0rem;
+        }
+    }
 
-    height: 100%;
+    & ~ .menu {
+        left: 0;
+    }
+}
+
+// Default menu styles
+// Menu CLOSED styles
+header.wrapper .container .menu {
+    position: absolute;
+    z-index: -1;
+    top: $header_height;
+    left: calc(-100vw - 3rem); // VP + padding
+
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, max-content);
+
     width: 100%;
 
-    & > * {
+    background: $color_background;
+
+    transition: $transition_anim;
+
+    &::after {
+        content: "";
+        position: absolute;
+        z-index: -1;
+
+        height: 100vh;
+        width: 100vw;
+
+        background: $color_background;
+
+        transition: $transition_anim;
+    }
+
+    nav {
+        grid-area: auto; // Unset from other layouts
+    }
+
+    nav ul {
         display: flex;
-        align-items: center;
-        justify-content: center;
+        flex-direction: column;
 
-        width: 100%;
-        margin: 0;
-        padding: 0.5rem 1rem;
+        & > li {
+            height: auto;
+            margin: auto 0;
+        }
+        & > li > a {
+            box-sizing: border-box;
+            width: 100%;
+            padding: 1rem 1.5rem;
 
-        color: $color_black;
-        text-align: center;
+            text-align: left;
+            color: $color_text;
 
-        &:hover {
-            color: $color_indywalls_primary_light;
+            transition: $transition_link;
+
+            &:hover {
+                color: $color_text_alt;
+                background: $color_background_alt;
+            }
         }
     }
-}
 
-.accountNav {
-    display: flex;
-    align-items: center;
-    padding: 0.5rem 1rem;
-
-    & > *:nth-child(1n + 2) {
-        margin-left: 1rem;
-    }
-
-    & .buttonRegister__dropdown {
-        display: none;
-    }
-}
-
-@media only screen and (min-width: $media_width_tablet) {
-    .content {
+    div.buttons {
+        grid-area: auto; // Unset from other layouts
         display: grid;
-        grid-template-columns: max-content minmax(0, auto) max-content max-content;
+        grid-template-columns: repeat(2, 1fr);
         grid-template-rows: 1fr;
 
-        width: 100%;
-        max-width: $max-width_content;
+        padding: 1rem 1.5rem;
+        border-top: 1px solid $color_border;
 
-        margin: 0 auto;
-        padding: 1rem 2rem;
+        background: $color_background;
 
-        /* Grid assignments */
-
-        & > a {
-            grid-area: 1/1/2/2;
+        & > * {
+            margin-right: 1rem;
+            text-align: center;
+        }
+        & > *:last-child {
+            margin-right: 0;
         }
 
-        & > .accountNav {
-            grid-area: 1/4/2/5;
+        & > .account {
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+
+            & > * {
+                padding: 0.5rem;
+            }
         }
+    }
+}
 
-        & > .mainNav {
-            grid-area: 1/3/2/4;
-        }
+/* Media queries */
+@media only screen and (min-width: $breakpoint_tablet) {
+    header.wrapper {
+        height: 6.5rem;
+        border-bottom: 1px solid $color_border;
     }
 
-    .buttonRegister:hover + .buttonRegister__dropdown,
-    .buttonRegister__dropdown:hover {
-        display: block;
-    }
-
-    .buttonRegister__container {
-        position: relative;
-    }
-
-    .buttonRegister__dropdown {
-        display: none;
-        // visibility: hidden;
-
-        position: absolute;
-        z-index: 998;
-        top: 100%;
+    header.wrapper .container {
         left: 50%;
-        transform: translateX(-50%);
-        overflow: hidden;
+        transform: translate(-50%, 0);
+        justify-content: flex-start;
 
-        width: max-content;
+        border: none;
+    }
 
-        padding: 2.5em 1em 0.5em 1em;
+    input.hamburgerButton ~ label {
+        display: none;
+    }
 
-        // opacity: 0;
+    header.wrapper .container .menu {
+        box-sizing: border-box;
 
-        // transition: opacity $transition_time_link;
+        z-index: unset;
+        top: 0;
+        left: 0;
 
-        & > span {
-            position: absolute;
-            z-index: 998;
-            top: 1.75em;
-            left: 50%;
-            transform: translateX(-50%);
+        padding: 0 1.5rem;
 
-            color: $color_grey_dark;
+        display: grid;
+        grid-template-columns: auto max-content;
+        grid-template-rows: $header_height 3rem;
 
-            font-size: 0.75em;
-            text-transform: uppercase;
-        }
-        & > a {
-            display: inline-block;
+        background: none;
 
-            position: relative;
-            z-index: 998;
-
-            margin-top: 0.25em;
-        }
-
-        // Dropdown background
         &::after {
-            content: "";
-            position: absolute;
-            z-index: 997;
-            top: 0.75em;
-            left: 0;
-            right: 0;
-            bottom: 0;
-
-            border-radius: 0.5em;
-
-            background: $color_black;
+            display: none;
         }
 
-        // Arrow above dropdown
-        &::before {
-            content: "";
-            pointer-events: none;
-            position: absolute;
-            z-index: 996;
-            top: -0.75em;
-            left: 50%;
-            margin-left: -0.75em;
+        div.buttons {
+            grid-area: 1/2/2/3;
+            
+            box-sizing: border-box;
+            display: flex;
+            flex-direction: row;
 
-            border: 0.75em solid transparent;
-            border-bottom: 0.75em solid $color_black;
+            align-items: center;
+            justify-content: center;
 
-            height: 0;
-            width: 0;
+            padding: 0;
+            margin: 0;
+            border: none;
+        }
+
+        nav {
+            grid-area: 2/1/3/3;
+        }
+
+        nav ul {
+            flex-direction: row;
+            justify-content: center;
+
+            & > li {
+                flex: 1;
+            }
+            & > li > a {
+                display: inline-block;
+                width: 100%;
+
+                text-align: center;
+            }
+        }
+    }
+}
+
+@media only screen and (min-width: $breakpoint_desktop) {
+    header.wrapper {
+        height: $header_height;
+    }
+
+    header.wrapper .container .menu {
+        box-sizing: border-box;
+        grid-template-columns: 4rem auto max-content;
+        grid-template-rows: 1fr;
+
+        height: $header_height;
+
+        padding: 0 1.5rem;
+
+        nav {
+            grid-area: 1/2/2/3;
+        }
+
+        div.buttons {
+            grid-area: 1/3/2/4;
+            padding-left: 1.5rem;
+
+            & > .account {
+                justify-content: center;
+            }
+        }
+
+        nav ul {
+            align-items: flex-start;
+            justify-content: flex-end;
+
+            height: 100%;
+            width: 100%;
+
+            & > li {
+                flex: 0;
+            }
+
+            & > li > a {
+                width: max-content;
+                padding: 1.25rem 1.5rem;
+            }
         }
     }
 }
