--- a/elyreacts/src/pages/styles/Home.module.scss
+++ b/elyreacts/src/pages/styles/Home.module.scss
@@ -13,14 +13,50 @@
     grid-area: heading;
 }
 
-.heroImage {
+.heroImageContainer {
+    position: relative;
+
     grid-area: image;
 
-    height: 24rem;
+    min-height: 24rem;
+    height: 100%;
     width: 100%;
 
-    background-position: center;
-    background-size: cover;
+    & > .heroImageAuthor {
+        position: absolute;
+        bottom: 1rem;
+        right: 1rem;
+
+        color: $color_white;
+
+        & > a {
+            color: $color_white;
+
+            &:hover {
+                color: $color_indywalls_primary_light;
+            }
+        }
+    }
+}
+.heroImage {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: inline-block;
+
+    width: 100%;
+    height: 100%;
+
+    & > img {
+        display: inline-block;
+        width: 100%;
+        height: 100%;
+
+        object-fit: cover;
+        object-position: 15%;
+    }
+
+    transition: $transition_time_anim_long;
 }
 
 .sectionLinkContainer {
