--- a/elyreacts/src/App.scss
+++ b/elyreacts/src/App.scss
@@ -161,11 +161,20 @@ a > img {
     }
 }
 
-ul.style-none {
+ul.style-li-inline,
+ul.address {
     list-style-type: none;
 
     li {
         display: inline-block;
+    }
+}
+
+ul.address {
+    & > li {
+        width: 100%; // Break line
+
+        margin-top: 0.25rem;
     }
 }
 
@@ -515,39 +524,39 @@ section {
         margin-top: 1.5rem;
     }
 
-    & > .information-grid {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-auto-rows: 1fr;
-
-        width: max-content;
-
-        margin: 0 auto;
-
-        & > *:nth-child(2n-1) {
-            // Column left
-            padding: 0.5rem 1rem 0.5rem 0.5rem;
-
-            color: $color_grey_dark;
-            text-align: right;
-        }
-
-        & > *:nth-child(2n) {
-            // Column right
-            padding: 0.5rem 1.25rem 0.5rem 0.5rem;
-
-            text-align: left;
-        }
-
-        & > *:nth-child(4n + 3),
-        & > *:nth-child(4n-4) {
-            background: $color_background_alt;
-        }
-    }
-
     & > a,
     & > button {
         margin: 1.5rem auto 0 auto;
+    }
+}
+div.information-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: max-content;
+
+    max-width: 100%;
+    width: max-content;
+
+    margin: 0 auto;
+
+    & > *:nth-child(2n-1) {
+        // Column left
+        padding: 0.5rem 1rem 0.5rem 0.5rem;
+
+        color: $color_grey_dark;
+        text-align: right;
+    }
+
+    & > *:nth-child(2n) {
+        // Column right
+        padding: 0.5rem 1.25rem 0.5rem 0.5rem;
+
+        text-align: left;
+    }
+
+    & > *:nth-child(4n + 3),
+    & > *:nth-child(4n-4) {
+        background: $color_background_alt;
     }
 }
 
