--- a/elyreacts/src/App.scss
+++ b/elyreacts/src/App.scss
@@ -415,8 +415,8 @@ section {
             margin: 1.5rem 0.5rem 0 0.5rem;
 
             & > img {
-                width: 8rem;
-                height: 8rem;
+                width: 4rem;
+                height: 4rem;
 
                 object-fit: contain;
 
@@ -608,5 +608,10 @@ div.information-grid {
         & > button {
             margin: 0.25rem 0.5rem;
         }
+    }
+
+    section > ul > li > a > img {
+        height: 8rem;
+        width: 8rem;
     }
 }
